# hypr-kdeconnect-fix

./: CMakeLists.txt  README.md  flake.nix
data/: hypr-kdeconnect.portal.in  org.freedesktop.impl.portal.desktop.hypr_kdeconnect.service.in
nix/: nixos-module.nix  package.nix
src/: eis_input_bridge.cpp  main.cpp  portal_backend.cpp  portal_backend.hpp  security_policy.hpp  wayland_input.cpp  wayland_input.hpp
tests/: hardening_readelf_test.cmake  security_policy_test.cpp
